# june

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml  example.june
driver/: CMakeLists.txt  Driver.cpp
examples/fizzbuzz/: FizzBuzz.june
examples/guessing/: Guessing.june
june/: Analysis.cpp  Analysis.h  Ast.h  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Compiler.cpp  Compiler.h  Comptime.cpp  Comptime.h  EmitDebugInfo.cpp  EmitDebugInfo.h  IRGen.cpp  IRGen.h  Identifier.cpp  Identifier.h  JuneContext.cpp  JuneContext.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  Prolog.h  RecordLocation.cpp  RecordLocation.h  Source.h  Tokens.cpp  Tokens.h  TypeBinding.cpp  TypeBinding.h  Types.cpp  Types.h  Util.cpp  Util.h
stdlib/std/: Math.june  Mem.june  Sys.june
stdlib/std/io/: File.june  FileFlags.june  InStream.june
stdlib/std/lang/: Characters.june  String.june
stdlib/std/os/: Unix.june  Win32.june
stdlib/std/util/: Math.june  Random.june
tests/: CMakeLists.txt  TestProcessUtil.cpp  TestProcessUtil.h  Tests.cpp
tests/resources/: Tests.june
tests/resources/exprs/: Exprs1.june  Exprs2.june  Exprs3.june  Exprs4.june
tests/resources/exprs1/: Exprs1.june
tests/resources/exprs2/: Exprs2.june
tests/resources/exprs3/: Exprs3.june
tests/resources/fixedarrays/: FixedArrays1.june  FixedArrays2.june  FixedArrays3.june  FixedArrays4.june  FixedArrays5.june  FixedArrays6.june  FixedArrays7.june  FixedArrays8.june
tests/resources/fixedarrays1/: FixedArrays1.june
tests/resources/fixedarrays4/: FixedArrays4.june
tests/resources/fixedarrays6/: FixedArrays6.june
tests/resources/fixedarrays7/: FixedArrays7.june
tests/resources/fixedarrays8/: FixedArrays8.june
tests/resources/functioncall/: FunctionCall1.june  FunctionCall2.june
tests/resources/functioncall1/: FunctionCall1.june
tests/resources/functioncall2/: FunctionCall2.june
tests/resources/generics/: Generics1.june  Generics2.june
tests/resources/globals/: Globals1.june  Globals2.june  Globals3.june  Globals4.june
tests/resources/globals1/: Globals1.june
tests/resources/globals2/: Globals2.june
tests/resources/inferedtypes/: InferedTypes.june
tests/resources/loops/: Loops1.june  Loops2.june  Loops3.june  Loops4.june  Loops5.june  Loops6.june  Loops7.june
tests/resources/loops3/: Loops3.june
tests/resources/loops4/: Loops4.june
tests/resources/loops5/: Loops5.june
tests/resources/loops6/: Loops6.june
tests/resources/loops7/: Loops7.june
tests/resources/main/: Main2.june
tests/resources/main1/: Main1.june
tests/resources/multifiles/: MultiFiles.june  OtherFile.june
tests/resources/othertests/: InferedTypes.june  PointerArithmetic.june  Sizeof.june  This.june
tests/resources/playground/: F2.june  OtherFile.june  Playground.june
tests/resources/this/: This.june
(+29 files in other folders)
